--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-dom": "^18.2.0",
-    "sass": "^1.71.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -24,6 +23,9 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.6"
+    "sass": "^1.71.1",
+    "scss": "^0.2.4",
+    "vite": "^5.1.6",
+    "vite-plugin-sass-glob-import": "^3.0.2"
   }
 }
